--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -20,10 +20,10 @@ repositories {
 dependencies {
     implementation files('libs/fits.jar')
     implementation 'androidx.preference:preference:1.1.1'
-    compile 'androidx.legacy:legacy-support-v4:1.0.0'
-    compile 'androidx.legacy:legacy-support-v13:1.0.0'
-    compile 'androidx.cardview:cardview:1.0.0'
-    compile 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 }
 
 // The sample build uses multiple directories to
